# study

./: readme.md
CPP_Module06/ex00/: Translator.hpp
CPP_Module06/ex02/: main.cpp
QtPraktikum/: FileProcessor.cpp  InsertWindow.h  MainWindow.cpp  MainWindow.h  Makefile  UpdateWindow.h  Worker.h  WorkerModel.cpp  default.json
SDL/: README.md
SDL/threads/: pom.xml
courseProjectDB/: AdminWorkWindow.py  AuthorizationWindow.py  ChangeTableWindow.py  MainWindow.py  TaskViewWindow.py  TaskWindow.py  ViewTableWindow.py  db_backup.sql  scheduler.sql
db-course-project/: AddTableWindow.py  DeleteTableWindow.py  UserWorkWindow.py  main.py
ft-printf/ftprintf-test/: result.txt  run.sh
ft-printf/include/: ft_printf.h
ft-printf/libft/: ft_isdigit.c  ft_putchar.c  ft_strlen.c  libft.h
ft-printf/src/: display_char.c  display_hex.c  display_int.c  display_percent.c  ft_printf.c  specifiers.c
ft-server/: Dockerfile  Makefile
get-next-line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  run.sh
libasm/: .gitignore  Makefile
libasm/src/: libasm.h  (+1 more)
libft/: Makefile  libft.h
moscow-parks-wifi/: datadownloader.cpp  datadownloader.h  mainwindow.ui  wifi_msk_parks.pro
philosophers/: .gitignore
pppeis/: .gitignore  docker-compose.yml  pom.xml
qt-prakticum/: CMakeLists.txt  DeleteWindow.cpp  DeleteWindow.h  FileProcessor.h  InsertWindow.cpp  UpdateWindow.cpp  Worker.cpp  WorkerModel.h
wifi_msk_parks/: index.html  mainwindow.cpp  mainwindow.h  wifinetwork.cpp  wifinetwork.h
(+417 files in other folders)
